syntax = "proto3";

package auth.service.v1;

option go_package = "project-auth/pkg/service/auth.service.v1";

// 用户登录接口
message LoginRequest {
  string username = 1; // 用户名
  string password = 2; // 用户密码
  string userAgent = 3; // 用户的设备信息
}

message Response {
  int64 code = 1;
  string msg = 2;
  string token = 3; // 登录之后返回用户的token
}

// 用户注册接口
message RegisterRequest {
  string username = 1; // 用户名
  string password = 2; // 用户密码
}

// 手机号（霸权，可以登录也可以注册）
message PhoneRequest {
  string phone = 1;
  string userAgent = 2;
  string code = 3; // 验证码
}

// 发送验证码
message GetCodeRequest {
  string phone = 1;
}

message GetCodeResponse {
  int64 code = 1;
}

// 退出登录
message LogoutRequest {
  string userAgent = 1;
  string token = 2; // 把token传过去方便后台删除redis的相关信息
}

message LogoutResponse {
  int64 code = 1;
}

service AuthService {
  rpc Login(LoginRequest) returns (Response) {}
  rpc Register(RegisterRequest) returns (Response) {}
  rpc Phone(PhoneRequest) returns (Response) {}
  rpc GetCode(GetCodeRequest) returns (GetCodeResponse) {}
  rpc Logout(LogoutRequest) returns(LogoutResponse) {}
}